--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -82,6 +82,7 @@
     </plugins>
   </reporting>
   <distributionManagement>
+    <url>http://oss.sonatype.org/content/groups/googlecode/</url>
     <repository>
       <id>googlecode-releases.oss.sonatype.com</id>
       <url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
