--- a/trunk/facebook-java-api-schema/pom.xml
+++ b/trunk/facebook-java-api-schema/pom.xml
@@ -37,6 +37,7 @@
 			<plugin>
 				<groupId>org.jvnet.jaxb2.maven2</groupId>
 				<artifactId>maven-jaxb2-plugin</artifactId>
+				<version>0.7.3</version>
 				<configuration>
 					<generatePackage>com.google.code.facebookapi.schema</generatePackage>
 
@@ -72,26 +73,26 @@
 		</plugins>
 	</build>
 	<profiles>
-  <profile>
-    <id>java-net-repo</id>
-    <activation>
-      <activeByDefault>true</activeByDefault>
-    </activation>
-    <repositories>
-      <repository>
-	<id>maven2-repository.dev.java.net</id>
-	<name>Java.net Maven 2 Repository</name>
-	<url>http://download.java.net/maven/2</url>
-      </repository>
-    </repositories>
-    <pluginRepositories>
-      <pluginRepository>
-	<id>maven2-repository.dev.java.net</id>
-	<name>Java.net Maven 2 Repository</name>
-	<url>http://download.java.net/maven/2</url>
-      </pluginRepository>
-    </pluginRepositories>
-  </profile>
+		<profile>
+			<id>java-net-repo</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<repositories>
+				<repository>
+					<id>maven2-repository.dev.java.net</id>
+					<name>Java.net Maven 2 Repository</name>
+					<url>http://download.java.net/maven/2</url>
+				</repository>
+			</repositories>
+			<pluginRepositories>
+				<pluginRepository>
+					<id>maven2-repository.dev.java.net</id>
+					<name>Java.net Maven 2 Repository</name>
+					<url>http://download.java.net/maven/2</url>
+				</pluginRepository>
+			</pluginRepositories>
+		</profile>
 		<profile>
 			<activation>
 				<jdk>1.5</jdk>
