--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.google.code.facebookapi</groupId>
   <artifactId>projects-all</artifactId>
   <packaging>pom</packaging>
-  <version>3.0.4-SNAPSHOT</version>
+  <version>3.0.4</version>
   <name>Facebook Java Library - All</name>
   <description>Facebook Java Library - All</description>
   <modules>
@@ -21,9 +21,9 @@
     <module>facebook-java-api</module>
   </modules>
   <scm>
-    <url>https://facebook-java-api.googlecode.com/svn/trunk</url>
-    <connection>scm:svn:https://facebook-java-api.googlecode.com/svn/trunk</connection>
-    <developerConnection>scm:svn:https://facebook-java-api.googlecode.com/svn/trunk</developerConnection>
+    <url>https://facebook-java-api.googlecode.com/svn/tags/release-3.0.4</url>
+    <connection>scm:svn:https://facebook-java-api.googlecode.com/svn/tags/release-3.0.4</connection>
+    <developerConnection>scm:svn:https://facebook-java-api.googlecode.com/svn/tags/release-3.0.4</developerConnection>
   </scm>
   <distributionManagement>
     <repository>
